# git-patch-manager

./: Cargo.toml  README.md
src/: commands.rs  config.rs  git.rs  lib.rs  series.rs  string.rs  subprocess.rs
src/commands/: apply.rs  generate.rs
